[package]
name = "gamer"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
rayon = "1.4.1"

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false
